[DP]효율적인화폐구성 - 그리디는 큰 단위가 작은 단위 배수일 때나 가능 - 그렇지 않으면 DP 유형

--- a/Algorithm(Python)/DynamicProgramming/DP_practice.ipynb
+++ b/Algorithm(Python)/DynamicProgramming/DP_practice.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#실전문제---1로-만들기\" data-toc-modified-id=\"실전문제---1로-만들기-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>실전문제 - 1로 만들기</a></span></li><li><span><a href=\"#실전문제---개미-전사\" data-toc-modified-id=\"실전문제---개미-전사-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>실전문제 - 개미 전사</a></span></li><li><span><a href=\"#실전문제---바닥-공사\" data-toc-modified-id=\"실전문제---바닥-공사-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>실전문제 - 바닥 공사</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#실전문제---1로-만들기\" data-toc-modified-id=\"실전문제---1로-만들기-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>실전문제 - 1로 만들기</a></span></li><li><span><a href=\"#실전문제---개미-전사\" data-toc-modified-id=\"실전문제---개미-전사-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>실전문제 - 개미 전사</a></span></li><li><span><a href=\"#실전문제---바닥-공사\" data-toc-modified-id=\"실전문제---바닥-공사-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>실전문제 - 바닥 공사</a></span></li><li><span><a href=\"#실전문제---효율적인-화폐-구성\" data-toc-modified-id=\"실전문제---효율적인-화폐-구성-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>실전문제 - 효율적인 화폐 구성</a></span></li></ul></div>"
    ]
   },
   {
@@ -132,6 +132,60 @@
     "    d[i] = (d[i-1] + d[i-2] * 2) % 796796\n",
     "\n",
     "print(d[n])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 실전문제 - 효율적인 화폐 구성\n",
+    "\n",
+    "- **그리디는 큰 단위가 작은 단위의 배수일 때나 가능!!**\n",
+    "- $a_m$을 구하기 위해 $a_i$부터 차례대로 구해서 $a_m$을 구하도록하자!\n",
+    "- 결국 작은 문제($a_i$)를 활용해 큰 문제($a_m$)을 해결하는 문제! = DP!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4\n",
+      "3\n",
+      "2\n",
+      "7\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# N가지 종류의 화페 중 M원을 만들기 위해 사용할 수 있는 최소한의 화폐 개수 구하기\n",
+    "n, m = map(int, input().split())\n",
+    "# 화폐 종류\n",
+    "array = [int(input()) for _ in range(n)]\n",
+    "'''\n",
+    "Idea) i-k원을 만들 수 있다면, 거기에 k원을 더해서 i원도 만들 수 있다!!! 발상의 전환..\n",
+    "i원을 만들 수 있는 최소 화폐 개수 = i-k(화폐단위)원을 만들 수 있는 최소 화폐 개수 + 1(i-k원에서 k원을 더해서 i원을 만드는 횟수더 1번!)\n",
+    "10001 : 주어진 m값 최댓값이 10000원인데, 이를 만들 수 있는 최대횟수가 1원으로 만 번이기 때문에 m원을 만들 수 없다는 의미로 INF값으로서 설정\n",
+    "'''\n",
+    "# i원을 만들 수 있는 최소 화폐 개수를 DP 테이블을 INF값으로 모두 설정하고 화폐 단위마다 0~m원까지 돌면서 DP 테이블 업데이트\n",
+    "d = [10001] * (m+1)\n",
+    "d[0] = 0  # 0원은 어떤 화폐도 사용하지 않아도 되므로!\n",
+    "\n",
+    "# 각 화폐단위 마다 loop => i는 화폐단위가 담겨있는 array의 index\n",
+    "for i in range(n):\n",
+    "    for j in range(array[i], m+1):   # array[i]에 있는 화폐단위 ~ m원까지 차례대로 최소개수 업데이트!\n",
+    "        #if d[j - array[i]] != 10001: # 없어도 됨!\n",
+    "        d[j] = min(d[j], d[j - array[i]] + 1)  # min하는 이유는 만약 d[j] 또는 d[j-array[i]]가 10001일 경우를 생각해야지!\n",
+    "\n",
+    "if d[m] == 10001:\n",
+    "    print(-1)\n",
+    "else:\n",
+    "    print(d[m])"
    ]
   },
   {
